Add client quota to verification email

--- a/app/views/user_mailer/notify_for_verification.text.erb
+++ b/app/views/user_mailer/notify_for_verification.text.erb
@@ -2,5 +2,7 @@ Client <%= @host %> is approved by an admin.
 
 You can now start scheduling your backups.
 
+Your size quota is set to <%= number_to_human_size(@host.quota) %>
+
 ---------
 Archiving
