Add jira issue collector to alla pages

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,6 +22,9 @@
           <%= flash_messages %>
           <%= yield %>
 
+          <script type="text/javascript"
+                  src="https://tts.grnet.gr/jira/s/1c250e45736d7c273d4088b96df63579-T/en_US-ktdk5i/6346/19/1.4.16/_/download/batch/com.atlassian.jira.collector.plugin.jira-issue-collector-plugin:issuecollector/com.atlassian.jira.collector.plugin.jira-issue-collector-plugin:issuecollector.js?locale=en-US&collectorId=7e9ca8be">
+          </script>
         </div> <!-- /layout-col -->
       </div> <!-- /layout-row -->
     </div> <!-- /container -->
