--- a/app/views/clients/logs.html.erb
+++ b/app/views/clients/logs.html.erb
@@ -4,6 +4,10 @@
   <div class='col-xs-3'>
     <h3>Logs <small>(<%= @logs.count %>)</small></h3>
   </div>
+  <div class="col-xs-4 right text-right">
+    <%= page_entries_info @logs, entry_name: 'log' %>
+    <%= paginate @logs %>
+  </div>
 </div>
 
 <div class="row">
