--- a/app/views/jobs/_job_templates.html.erb
+++ b/app/views/jobs/_job_templates.html.erb
@@ -10,6 +10,7 @@
           <th>Client Before Run Job</th>
           <th>Client After Run Job</th>
           <th>Enabled</th>
+          <th>Actions</th>
         </tr>
       </thead>
 
@@ -19,6 +20,8 @@
       </tbody>
     </table>
   </div>
-  <%= button_or_disabled(@host.blocked?, 'Add Job', new_host_job_path(host_id: @host.id),
-                         class: "btn btn-success", role: "button") %>
+  <%= button_or_disabled_with_label(
+    @host.blocked?, 'Add Job', new_host_job_path(host_id: @host.id),
+    class: "btn btn-default", role: "button",
+    icon_class: 'glyphicon glyphicon-plus', text_class: 'text-success') %>
 </div>
