Bugfix on host verification email
Ref T411

--- a/app/views/user_mailer/notify_for_verification.text.erb
+++ b/app/views/user_mailer/notify_for_verification.text.erb
@@ -1,4 +1,4 @@
-Client <%= @host %> is approved by an admin.
+Client <%= @host.name %> is approved by an admin.
 
 You can now start scheduling your backups.
 
