--- a/app/views/admin/faqs/new.html.erb
+++ b/app/views/admin/faqs/new.html.erb
@@ -1,11 +1,12 @@
 <div class="row">
-  <div class="col-xs-10">
+  <div class="col-xs-10 col-xs-offset-1">
     <div class="panel panel-default">
       <div class="panel-heading">
         <h4>New FAQ entry</h4>
       </div>
-      <br />
-      <%= render partial: 'form' %>
+      <div class="panel-body">
+        <%= render partial: 'form' %>
+      </div>
     </div>
   </div>
 </div>
