--- a/app/views/admin/faqs/show.html.erb
+++ b/app/views/admin/faqs/show.html.erb
@@ -4,14 +4,10 @@
       <h4><%= @faq.title %></h4>
     </div>
 
-    <br/>
-
-    <p>
+    <div class="panel-body">
       <%= @faq.pretty_body %>
-    </p>
+    </div>
   </div>
-
-  <%= link_to 'Back to FAQ', admin_faqs_path %>
 
   <%= link_to edit_admin_faq_path(@faq), class: 'btn btn-default' do %>
     <label class="glyphicon glyphicon-edit text-primary"></label>
