--- a/app/views/filesets/_form.html.erb
+++ b/app/views/filesets/_form.html.erb
@@ -15,8 +15,13 @@
 
 
   <div class="form-group">
-    <div class="col-xs-offset-3 col-xs-8">
+    <div class="col-xs-offset-3 col-xs-3">
       <%= f.submit class: 'btn btn-success' %>
+    </div>
+    <div class="col-xs-3">
+      <%= link_to 'Cancel',
+        @job_id.present? ? edit_host_job_path(@host, @job_id) : new_host_job_path(@host),
+        role: 'button', class: 'btn btn-danger'%>
     </div>
   </div>
 <% end %>
