--- a/app/views/jobs/_schedule.html.erb
+++ b/app/views/jobs/_schedule.html.erb
@@ -14,7 +14,9 @@
     </h4>
   </div>
   <br />
-  <pre>
+  <div class="panel-body">
+    <pre>
 <%= schedule.human_readable %>
-  </pre>
+    </pre>
+  </div>
 </div>
