--- a/app/views/clients/_jobs.html.erb
+++ b/app/views/clients/_jobs.html.erb
@@ -8,6 +8,7 @@
           <th>Fileset</th>
           <th>Schedule</th>
           <th>Created</th>
+          <th>Last Backup</th>
           <th>Actions</th>
         </tr>
       </thead>
