--- a/app/views/clients/restore.html.erb
+++ b/app/views/clients/restore.html.erb
@@ -37,13 +37,10 @@
           <hr />
 
           <div class="row">
-            <div class="col-xs-5 col-xs-offset-6 text-right">
+            <div class="col-xs-4 col-xs-offset-4">
               <%= f.submit 'Select Specific Files', id: 'select-files', class: 'btn btn-primary'  %>
             </div>
-          </div>
-          <br />
-          <div class="row">
-            <div class="col-xs-3 col-xs-offset-8">
+            <div class="col-xs-4">
               <%= f.submit 'Restore All Files', class: 'btn btn-warning text-right',
                   data: { confirm: "This will restore all your files" }
               %>
