--- a/app/views/hosts/show.html.erb
+++ b/app/views/hosts/show.html.erb
@@ -16,6 +16,18 @@
   </div>
 </div>
 
+<br />
+
+<div class='row'>
+  <% if @host.client %>
+    <div class='col-xs-12'>
+      <%= link_to client_path(@host.client), class: 'btn btn-default' do %>
+        <label class="glyphicon glyphicon-menu-left text-primary"></label>
+        Back to client
+      <% end %>
+    </div>
+  <% end %>
+</div>
 
 <%= render partial: 'jobs/modals' %>
 
