--- a/app/views/admin/settings/_form.html.erb
+++ b/app/views/admin/settings/_form.html.erb
@@ -1,7 +1,7 @@
 <%= bootstrap_form_for(@setting, url: path, layout: :horizontal,
                        label_col: 'col-xs-5', control_col: 'col-xs-5') do |f| %>
   <div class="row">
-    <div class="col-xs-4">
+    <div class="col-md-4 col-xs-12">
       <div class="panel panel-default">
         <div class="panel-heading">
             <h4>Client</h4>
@@ -28,7 +28,7 @@
       </div>
     </div>
 
-    <div class="col-xs-4">
+    <div class="col-md-4 col-xs-12">
       <div class="panel panel-default">
         <div class="panel-heading">
             <h4>Job</h4>
@@ -49,7 +49,7 @@
       </div>
     </div>
 
-    <div class="col-xs-4">
+    <div class="col-md-4 col-xs-12">
       <div class="panel panel-default">
         <div class="panel-heading">
             <h4>Pool</h4>
@@ -71,7 +71,7 @@
 
   <div class="form-group">
     <div class="col-xs-1">
-      <%= link_to 'Cancel', admin_settings_path %>
+      <%= link_to 'Cancel', admin_settings_path, role: :button, class: 'btn btn-danger' %>
     </div>
     <div class="col-xs-2 col-xs-offset-1 text-right">
       <%= f.submit class: 'btn btn-success' %>
