--- a/app/views/clients/_file_selector.html.erb
+++ b/app/views/clients/_file_selector.html.erb
@@ -1,4 +1,4 @@
-<div id='file-selector' class="col-xs-4">
+<div id='file-selector' class="col-md-4 col-xs-6">
   <div class='panel panel-default'>
     <div class='panel-heading'>
       <h3> Files </h3>
@@ -10,7 +10,7 @@
   </div>
 </div>
 
-<div class="col-xs-4">
+<div class="col-md-4 col-xs-6">
   <div class="panel panel-default" id="restore-details" style="display:none">
     <div class="panel-heading">
       <h3>Restore details</h3>
