--- a/app/views/clients/restore.html.erb
+++ b/app/views/clients/restore.html.erb
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="col-xs-4">
+  <div class="col-md-4 col-xs-6">
     <% if @client.is_backed_up? %>
       <div class="panel panel-default">
         <div class="panel-heading">
@@ -37,10 +37,8 @@
           <hr />
 
           <div class="row">
-            <div class="col-xs-4 col-xs-offset-4">
+            <div class="col-xs-12 text-right">
               <%= f.submit 'Select Specific Files', id: 'select-files', class: 'btn btn-primary'  %>
-            </div>
-            <div class="col-xs-4">
               <%= f.submit 'Restore All Files', class: 'btn btn-warning text-right',
                   data: { confirm: "This will restore all your files" }
               %>
