--- a/app/views/hosts/_fd_config.html.erb
+++ b/app/views/hosts/_fd_config.html.erb
@@ -1,16 +1,16 @@
-<div class="col-xs-4">
+<div class="col-lg-4 col-md-6">
   <h3>Client FileDaemon Config</h3>
   <pre class="pre">
 <%= @host.bacula_fd_filedaemon_config %>
   </pre>
 </div>
-<div class="col-xs-4">
+<div class="col-lg-4 col-md-6">
   <h3>Client Director Config</h3>
   <pre class="pre">
 <%= @host.bacula_fd_director_config %>
   </pre>
 </div>
-<div class="col-xs-4">
+<div class="col-lg-4 col-md-6">
   <h3>Client Messages Config</h3>
   <pre class="pre">
 <%= @host.bacula_fd_messages_config %>
@@ -29,19 +29,19 @@
 </div>
 
 <div id="js-fd-config" class="modal" tabindex="-1" role="dialog" aria-labelledby="ConfigModal">
-    <div class="modal-dialog modal-lg">
-      <div class="modal-content container">
-        <br />
-        <div class="panel panel-default">
-          <div class="panel-heading">Config Download</div>
-          <div class="panel-body">
-            You can also download the config like this:
-            <pre>
+  <div class="modal-dialog modal-lg">
+    <div class="modal-content container">
+      <br />
+      <div class="panel panel-default">
+        <div class="panel-heading">Config Download</div>
+        <div class="panel-body">
+          You can also download the config like this:
+          <pre>
 <%= "$ wget -O bacula-fd.conf #{fd_config_host_url(@host, token: current_user.token,
                                                    protocol: 'https://')}" %>
-            </pre>
-          </div>
+          </pre>
         </div>
       </div>
     </div>
   </div>
+</div>
