--- a/app/views/jobs/_job_templates.html.erb
+++ b/app/views/jobs/_job_templates.html.erb
@@ -1,4 +1,4 @@
-<div class="col-xs-8">
+<div class="col-lg-9 col-md-12">
   <div class="table-responsive">
     <table class="table table-striped table-bordered table-condensed">
       <thead>
