--- a/app/views/application/index.html.erb
+++ b/app/views/application/index.html.erb
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="col-xs-4 col-xs-offset-2">
+  <div class="col-lg-4 col-lg-offset-2 col-md-5 col-md-offset-1 col-sm-6 col-xs-12">
     <div class="panel panel-default">
       <div class="panel-heading">
         <h4>
@@ -17,12 +17,12 @@
 
         <p>Suggestions or problems should be reported to GRNET NOC's Helpdesk (<%= mail_to 'support@grnet.gr', 'support at grnet.gr' %>).</p>
 
-        <a href="https://grnet.gr/services/cloud-services/archiving/">Achiving as a Service</a>
+        <a href="https://grnet.gr/services/cloud-services/archiving/" target="blank">Achiving as a Service</a>
       </div>
     </div>
   </div>
 
-  <div class="col-xs-4">
+  <div class="col-lg-4 col-md-5 col-sm-6 col-xs-12">
     <div class="panel panel-default">
       <div class="panel-heading">
         <h4>
