--- a/app/views/jobs/show.html.erb
+++ b/app/views/jobs/show.html.erb
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="col-xs-6">
+  <div class="col-sm-12 col-md-8 col-lg-6">
     <div class="panel panel-default">
       <div class="panel-heading">
         <h1>"<%= @job.name %>" Job Template</h1>
@@ -7,25 +7,26 @@
 
       <%= render partial: 'job_details' %>
     </div>
-    <div class="col-xs-2 col-xs-offset-4 right">
-      <%= link_to host_path(@host), class: "btn btn-default" do %>
-        <label class="glyphicon glyphicon-menu-left text-primary"></label>
-        Back to host
-      <% end %>
-    </div>
-    <div class="col-xs-1">
-      <%= link_to edit_host_job_path(@host, @job), class: "btn btn-default", role: "button" do %>
-        <label class="glyphicon glyphicon-edit text-primary"></label>
-        Edit
-      <% end %>
-    </div>
-    <div class="col-xs-1">
-      <%= link_to host_job_path(@host, @job),
-                  method: :delete, data: { confirm: 'This will delete the job' },
-                  class: "btn btn-default", role: "button" do %>
-        <label class="glyphicon glyphicon-ban-circle text-danger"></label>
-        Delete
-      <% end %>
-    </div>
+  </div>
+</div>
+
+<div class="row">
+  <div class="col-sm-12 col-md-8 col-lg-6">
+    <%= link_to host_path(@host), class: "btn btn-default" do %>
+      <label class="glyphicon glyphicon-menu-left text-primary"></label>
+      Back to host
+    <% end %>
+
+    <%= link_to edit_host_job_path(@host, @job), class: "btn btn-default", role: "button" do %>
+      <label class="glyphicon glyphicon-edit text-primary"></label>
+      Edit
+    <% end %>
+
+    <%= link_to host_job_path(@host, @job),
+      method: :delete, data: { confirm: 'This will delete the job' },
+      class: "btn btn-default right", role: "button" do %>
+      <label class="glyphicon glyphicon-ban-circle text-danger"></label>
+      Delete
+    <% end %>
   </div>
 </div>
