--- a/app/views/clients/_client_details.html.erb
+++ b/app/views/clients/_client_details.html.erb
@@ -1,4 +1,5 @@
-<div class="col-xs-4">
+<div class="col-xs-12 col-sm-10 col-md-4">
+  <h3>Client Details</h3>
   <div class="table-responsive">
     <table class="table table-striped table-bordered table-condensed ">
       <tr>
