--- a/app/views/clients/_jobs.html.erb
+++ b/app/views/clients/_jobs.html.erb
@@ -1,4 +1,5 @@
-<div class="col-xs-12">
+<div class="col-sm-12 col-md-8">
+  <h3>Backup Jobs</h3>
   <div class="table-responsive">
     <table class="table table-striped table-bordered table-condensed">
       <thead>
