--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,5 +30,6 @@
         </div> <!-- /layout-col -->
       </div> <!-- /layout-row -->
     </div> <!-- /container -->
+    <%= render 'shared/footer' %>
   </body>
 </html>
