Distinguish active and obsolete bacula clients
Ref T642

A client that is removed from archiving stays in bacula db until its
retention is fulfilled or it is removed by a Bacula admin.
We distinguish these (obsolete) clients in admin in order to have
clearer views for the Archiving admin.

--- a/app/views/admin/clients/index.html.erb
+++ b/app/views/admin/clients/index.html.erb
@@ -1,4 +1,11 @@
-<h1>Bacula Clients</h1>
+<% if @obsolete %>
+  <h1 data-toggle="tooltip" title="These clients are not in Archiving but they are present to the Bacula db">
+    Obsolete Clients
+    <small><label class="glyphicon glyphicon-question-sign"></label></small>
+  </h1>
+<% else %>
+  <h1>Bacula Clients</h1>
+<% end %>
 
 <div class="datatable-wrapper">
   <div class="table-responsive">
