--- a/app/views/shared/_admin.html.erb
+++ b/app/views/shared/_admin.html.erb
@@ -2,15 +2,21 @@
   <%= content_tag(:li, active_class(admin_path)) do %>
     <%= link_to 'Admin', admin_path %>
   <% end %>
-  <%= content_tag(:li, active_class(admin_clients_path, true)) do %>
+  <%= content_tag(:li, active_class(admin_clients_path)) do %>
     <%= link_to 'Clients', admin_clients_path %>
   <% end %>
   <%= content_tag(:li,
-                  { class: "dropdown #{active_class(unverified_admin_hosts_path)[:class]}" }) do %>
+                  { class: ['dropdown',
+                             active_class([obsolete_admin_clients_path,
+                                           unverified_admin_hosts_path,
+                                           rejected_admin_hosts_path])[:class]].join(' ')}) do %>
     <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-      Unverified Clients <span class="caret"></span>
+      Inactive Clients <span class="caret"></span>
     </a>
     <ul class="dropdown-menu">
+      <li>
+        <%= link_to 'Obsolete Clients', obsolete_admin_clients_path %>
+      </li>
       <li>
         <%= link_to 'Unverified Clients', unverified_admin_hosts_path %>
       </li>
