Footer style fix

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
   </head>
   <body>
     <%= render "shared/nav" %>
-    <div class="container-fluid">
+    <div class="container-fluid main-container">
       <div class="row">
         <div class="col-xs-12">
           <%= flash_messages %>
