--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -22,6 +22,11 @@
 /* Make sure navbar does not overlay body */
 body {
   padding-top: 70px;
+  height: 100%;
+}
+
+html {
+  height: 100%;
 }
 
 .right {
@@ -30,14 +35,21 @@ body {
   float: right;
 }
 
+.main-container {
+  min-height: 100%;
+  margin: 0 auto -110px;
+}
+
 footer.footer {
-  position: fixed;
+  position: relative;
   width: 100%;
-  background-color: #F7F7F7;
   color: #b4b4bf;
   text-align: center;
   padding-top: 5px;
   bottom: 0px;
+  background-color: #F7F7F7;
+  height: 110px;
+  margin-bottom: 0;
 }
 
 .footer a {
